Created initial files for game UI

--- a/editor.html
+++ b/editor.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>Loot &amp; Labyrinths</title>
+    <title>Loot &amp; Labyrinths Editor</title>
     <style>
       canvas {
         border: 1px solid black;
@@ -44,5 +44,5 @@
   </body>
   <script src="map.js"></script>
   <script src="validator.js"></script>
-  <script src="main.js"></script>
+  <script src="editor.js"></script>
 </html>
