--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <canvas id="map-canvas"></canvas>
   </body>
   <script src="map.js"></script>
+  <script src="puzzle.js"></script>
   <script src="validator.js"></script>
   <script src="game.js"></script>
 </html>
