Made hints react to wall placement

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <canvas id="map-canvas"></canvas>
     <img src="images/tiles.png" class="resource" id="img_tiles"/>
     <img src="images/wallmap.png" class="resource" id="img_wallmap"/>
+    <img src="images/treasure.png" class="resource" id="img_treasure"/>
   </body>
   <script src="map.js"></script>
   <script src="puzzle.js"></script>
