Clunky marker implementation, plus reading data from URL

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         margin: 0px;
       }
       canvas {
-        border: 1px solid black;
         cursor: crosshair;
         image-rendering: pixelated;
       }
@@ -18,10 +17,12 @@
     </style>
   </head>
   <body>
+    <h1 id="puzzle_name"></h1>
     <canvas id="map-canvas"></canvas>
     <img src="images/tiles.png" class="resource" id="img_tiles"/>
     <img src="images/wallmap.png" class="resource" id="img_wallmap"/>
     <img src="images/treasure.png" class="resource" id="img_treasure"/>
+    <img src="images/marker.png" class="resource" id="img_marker"/>
   </body>
   <script src="map.js"></script>
   <script src="puzzle.js"></script>
