Programmer art monster

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style>
       body {
         margin: 0px;
+        background-color: #d5d5d5;
       }
       canvas {
         cursor: crosshair;
@@ -17,12 +18,13 @@
     </style>
   </head>
   <body>
-    <h1 id="puzzle_name"></h1>
     <canvas id="map-canvas"></canvas>
+    <h1 id="puzzle_name"></h1>
     <img src="images/tiles.png" class="resource" id="img_tiles"/>
     <img src="images/wallmap.png" class="resource" id="img_wallmap"/>
     <img src="images/treasure.png" class="resource" id="img_treasure"/>
     <img src="images/marker.png" class="resource" id="img_marker"/>
+    <img src="images/monster0.png" class="resource" id="img_monster0"/>
   </body>
   <script src="map.js"></script>
   <script src="puzzle.js"></script>
