Adjusted tool behavior
Also added support for additional monster types

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       .resource {
         display: none;
       }
+      h1 {
+        font-style: italic;
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+      }
     </style>
   </head>
   <body>
@@ -24,7 +28,7 @@
     <img src="images/wallmap.png" class="resource" id="img_wallmap"/>
     <img src="images/treasure.png" class="resource" id="img_treasure"/>
     <img src="images/marker.png" class="resource" id="img_marker"/>
-    <img src="images/monster0.png" class="resource" id="img_monster0"/>
+    <img src="images/monsters.png" class="resource" id="img_monster"/>
   </body>
   <script src="map.js"></script>
   <script src="puzzle.js"></script>
