Prevent zoom when mashing on undo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
       }
       button {
-        
         height: 256px;
         width: 256px;
         margin-left: 70%;
@@ -28,7 +27,7 @@
         background-color: darkred;
         font-size: 64px;
         color: white;
-
+        touch-action: manipulation;
       }
     </style>
   </head>
