--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         margin: 16px;
         background-color: gray;
         font-size: 64px;
-        color: white;
         border-width: 8px;
         touch-action: manipulation;
         border-radius: 20%;
@@ -42,12 +41,10 @@
         margin-top: 32px;
         background-color: rgb(139, 8, 63);
         font-size: 64px;
-        color: white;
         border-width: 16px;
         touch-action: manipulation;
         border-radius: 50%;
         border-color: red;
-
         grid-column: 1 / 3;
       }
       button#tool_mode + div {
@@ -62,6 +59,11 @@
         color: darkblue;
       }
 
+      #rules {
+        margin-left: 5em;
+        margin-right: 5em;
+      }
+
     </style>
   </head>
   <body>
@@ -74,6 +76,37 @@
         <button id="redo"></button>
         <div>UNDO</div>
         <div>REDO</div>
+    </div>
+    <div id="rules">
+        <h2>Objective</h2>
+        <p>
+            Place walls on the grid to construct a map of a labryinth
+            that follows the rules described below. You may also place
+            a marker to indicate empty spaces, but this is just to aid
+            in solving the puzzle. Empty spaces need not be marked for
+            the puzzle to be solved.
+        </p>
+        <h2>Rules</h2>
+        <p>
+            <ul>
+                <li>The numbers along the top and side indicate the total number of walls for that row or column.</li>
+                <li>All tiles that are not walls are either part of a hallway or treasure room</li>
+                <li>Treasure rooms contain a bag of loot and are always 3x3 squares with exactly one exit. The treasure can be on any square in the treasure room, but a treasure room will always have exactly one bag of loot.</li>
+                <li>Hallways are always exactly one square wide.</li>
+                <li>Every dead end contains a monster and every monster is a dead end (surrounded by walls or the edge of the map on 3 sides in the cardinal directions).</li>
+                <li>All hallways and rooms on the map are connected.</li>
+            </ul>
+        </p>
+        <h2>Controls</h2>
+        <p>
+            With a mouse, place/remove walls by left clicking on a tile.
+            Mark spaces as empty by right clicking on an empty tile.
+        </p>
+        <p>
+            Using touch controls, touch a tile to place/remove a wall.
+            Press the red "A" button to toggle between placing walls
+            and placing markers.
+        </p>
     </div>
     <img src="images/tiles.png" class="resource" id="img_tiles"/>
     <img src="images/wallmap.png" class="resource" id="img_wallmap"/>
