--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
       }
 
       #rules {
-        margin-left: 5em;
-        margin-right: 5em;
+        font-family:'Arial Narrow', Arial, sans-serif;
+        margin-left: 1em;
+        margin-right: 1em;
+        font-size: 36px;
+      }
+
+      #rules h2 {
+        font-size: 40px;
       }
 
     </style>
@@ -91,19 +97,19 @@
             <ul>
                 <li>The numbers along the top and side indicate the total number of walls for that row or column.</li>
                 <li>All tiles that are not walls are either part of a hallway or treasure room</li>
-                <li>Treasure rooms contain a bag of loot and are always 3x3 squares with exactly one exit. The treasure can be on any square in the treasure room, but a treasure room will always have exactly one bag of loot.</li>
-                <li>Hallways are always exactly one square wide.</li>
+                <li>Treasure rooms contain a bag of loot and are always 3x3 tiles square with exactly one exit. The treasure can be on any tile in the treasure room, but a treasure room will always have exactly one bag of loot.</li>
+                <li>Hallways are always exactly one tile wide. So, outside of treasure rooms, there are no 2x2 blocks of empty tiles.</li>
                 <li>Every dead end contains a monster and every monster is a dead end (surrounded by walls or the edge of the map on 3 sides in the cardinal directions).</li>
                 <li>All hallways and rooms on the map are connected.</li>
             </ul>
         </p>
         <h2>Controls</h2>
         <p>
-            With a mouse, place/remove walls by left clicking on a tile.
+            With a <b>mouse</b>, place/remove walls by left clicking on a tile.
             Mark spaces as empty by right clicking on an empty tile.
         </p>
         <p>
-            Using touch controls, touch a tile to place/remove a wall.
+            Using <b>touch controls</b>, touch a tile to place/remove a wall.
             Press the red "A" button to toggle between placing walls
             and placing markers.
         </p>
