--- a/editor.html
+++ b/editor.html
@@ -31,7 +31,7 @@
     </style>
   </head>
   <body>
-    <canvas id="map-canvas" width="576" height="576"></canvas>
+    <canvas id="map-canvas"></canvas>
     <div id="toolbar">
         <div id="tool_0"></div>
         <div id="tool_1"></div>
