Updated keyboard controls

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <p>
             With a <b>mouse</b>, place/remove walls by left clicking on a tile.
             Mark spaces as empty by right clicking on an empty tile. Undo actions
-            with CTRL+Z and redo them with CTRL+SHIFT+Z.
+            with CTRL+Z and redo them with CTRL+Y or CTRL+SHIFT+Z.
         </p>
         <p>
             Using <b>touch controls</b>, touch a tile to place/remove a wall.
