Replaced bag with chest

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <ul>
                 <li>The numbers along the top and side indicate the total number of walls for that row or column.</li>
                 <li>All tiles that are not walls are either part of a hallway or treasure room</li>
-                <li>Treasure rooms contain a bag of loot and are always 3x3 tiles square with exactly one exit. The treasure can be on any tile in the treasure room, but a treasure room will always have exactly one bag of loot.</li>
+                <li>Treasure rooms contain a treasure chest and are always 3x3 tiles square with exactly one exit. The treasure can be on any tile in the treasure room, but a treasure room will always have exactly one chest.</li>
                 <li>Hallways are always exactly one tile wide. So, outside of treasure rooms, there are no 2x2 blocks of empty tiles.</li>
                 <li>Every dead end contains a monster and every monster is a dead end (surrounded by walls or the edge of the map on 3 sides in the cardinal directions).</li>
                 <li>All hallways and rooms on the map are connected.</li>
