Created numbers to match visual style

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     <img src="images/marker.png" class="resource" id="img_marker"/>
     <img src="images/monsters.png" class="resource" id="img_monster"/>
     <img src="images/mode.png" class="resource" id="img_mode"/>
+    <img src="images/numbers.png" class="resource" id="img_numbermap"/>
   </body>
   <script src="map.js"></script>
   <script src="puzzle.js"></script>
