--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
+    <meta name="theme-color" content="#808080" >
     <title>Loot &amp; Labyrinths</title>
     <style>
       @media (max-width: 480px) {
