--- a/lnl/index.html
+++ b/lnl/index.html
@@ -8,24 +8,26 @@
   </head>
   <body>
     <div class="container">
-        <h1>Tutorial Puzzles</h1>
+        <h1 class="display-1">Loot &amp; Labryinths</h1>
+        <h2>Tutorial Puzzles</h2>
         <div class="list-group">
-            <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C0211.R1111.M001111201.T.&name=The+Haunted+Broom+Closet">The Haunted Broom Closet</a>
+            <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C23332.R50305.M.T.&name=Rows+and+Columns">Rows and Columns</a>
+            <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C55144.R24445.M230400.T.&name=Monsters+and+Dead+Ends">Monsters and Dead Ends</a>
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C13111.R04102.M400.T44.&name=Treasure+Room">Treasure Room</a>
         </div>
-        <h1>Easy</h1>
+        <h2>Easy</h2>
         <div class="list-group">
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C56612166.R60507555.M302502712732.T35.&name=Under+the+Gaze+of+the+Watchers">Under the Gaze of the Watchers</a>
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C45406455.R47433453.M003263633.T.&name=The+Deceitful+Hoard">The Deceitful Hoard</a>
         </div>
-        <h1>Moderate</h1>
+        <h2>Moderate</h2>
         <div class="list-group">
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C23253341.R14151641.M040060250400460.T11.&name=The+Gauntlet+of+Bones">The Gauntlet of Bones</a>
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C15316435.R54224434.M031051120231251411.T53.&name=Spooky+Corridors">Spooky Corridors</a>
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C13153333.R51343312.M611721.T2175.&name=Phantom+Chase">Phantom Chase</a>
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C34442514.R47523231.M304324733.T03.&name=The+Thief%27s+Sorrow">The Thief's Sorrow</a>
         </div>
-        <h1>Challenging</h1>
+        <h2>Challenging</h2>
         <div class="list-group">
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C15053345.R34351424.M610.T.&name=Lonely+Loops">Lonely Loops</a>
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C52326134.R25334414.M012062372722.T13.&name=Watchers+of+the+Loot">Watchers of the Loot</a>
