Added to puzzle list

--- a/lnl/index.html
+++ b/lnl/index.html
@@ -19,6 +19,7 @@
         <div class="list-group">
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C56612166.R60507555.M302502712732.T35.&name=Under+the+Gaze+of+the+Watchers">Under the Gaze of the Watchers</a>
             <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C45406455.R47433453.M003263633.T.&name=The+Deceitful+Hoard">The Deceitful Hoard</a>
+            <a class="list-group-item list-group-item-action" href="https://cronomst.github.io/?puzzle=C111302020222021.R4861.Me00e30.T21.&name=The+Grand+Hall">The Grand Hall</a>
         </div>
         <h2>Moderate</h2>
         <div class="list-group">
