--- a/lnl/index.html
+++ b/lnl/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Loot &amp; Labryinths - Puzzles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+        @media (max-width: 480px) {
+            h1::before {
+                content: url("../images/logo32.png");
+            }
+        }
+        @media (min-width: 480px) {
+            h1::before {
+                content: url("../images/logo64.png");
+            }
+        }
+    </style>
   </head>
   <body>
     <div class="container">
