Load solution from code in editor

--- a/lnl/editor.html
+++ b/lnl/editor.html
@@ -69,6 +69,10 @@
     <div>
         <button id="toggle_walls">Toggle Walls</button>
     </div>
+    <div>
+        <input id="solution_code">
+        <button id="decode">Decode</button>
+    </div>
   </body>
   <script src="map.js"></script>
   <script src="validator.js"></script>
