Image-based grid

--- a/lnl/index.html
+++ b/lnl/index.html
@@ -152,6 +152,7 @@
     </div>
     <img src="images/treasure.png" class="resource" id="img_treasure"/>
     <img src="images/tiles.png" class="resource" id="img_tiles"/>
+    <img src="images/grid.png" class="resource" id="img_grid"/>
     <img src="images/wallmap.png" class="resource" id="img_wallmap"/>
     <img src="images/marker.png" class="resource" id="img_marker"/>
     <img src="images/monsters.png" class="resource" id="img_monster"/>
